Use the redunacy provider.